--- a/AMSI/Projeto/app/src/main/res/layout/activity_ip.xml
+++ b/AMSI/Projeto/app/src/main/res/layout/activity_ip.xml
@@ -15,7 +15,8 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="0dp"
+            android:layout_weight="0.4" />
 
         <ImageView
             android:id="@+id/imgLogo"
@@ -26,14 +27,14 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.6"/>
+            android:layout_weight="0.2" />
 
         <EditText
             android:id="@+id/etIP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/txt_ip"/>
+            android:hint="@string/txt_ip"
+            android:inputType="text" />
 
         <Space
             android:layout_width="match_parent"
@@ -43,12 +44,12 @@
             android:id="@+id/btnLigarServidor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txt_ligacao_servidor"
-            android:onClick="onClickLigarServidor"/>
+            android:onClick="onClickLigarServidor"
+            android:text="@string/txt_ligacao_servidor" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.3"/>
+            android:layout_weight="0.4" />
     </LinearLayout>
 </LinearLayout>
