--- a/AMSI/Projeto/app/src/main/res/layout/activity_registo.xml
+++ b/AMSI/Projeto/app/src/main/res/layout/activity_registo.xml
@@ -16,14 +16,19 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1" />
+            android:layout_height="0dp"
+            android:layout_weight="0.3" />
 
         <ImageView
             android:id="@+id/imgLogo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/logotipo_projeto" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1" />
 
         <EditText
             android:id="@+id/etUsername"
@@ -36,9 +41,8 @@
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:inputType="textEmailAddress"
-            android:hint="@string/txt_email"/>
+            android:hint="@string/txt_email"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/etPassword"
@@ -46,6 +50,27 @@
             android:layout_height="wrap_content"
             android:hint="@string/txt_password"
             android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/etNif"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Introduza o Nif"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/etMorada"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Introduza a morada"
+            android:inputType="text" />
+
+        <EditText
+            android:id="@+id/etTelefone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Introduza o telefone"
+            android:inputType="number" />
 
         <Space
             android:layout_width="match_parent"
@@ -62,6 +87,6 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.3" />
+            android:layout_weight="0.5" />
     </LinearLayout>
 </LinearLayout>
