--- a/AMSI/Projeto/app/src/main/res/values/themes.xml
+++ b/AMSI/Projeto/app/src/main/res/values/themes.xml
@@ -2,8 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ProdutosGinasio" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/blue_app</item>
     </style>
 
     <style name="Theme.ProdutosGinasio" parent="Base.Theme.ProdutosGinasio" />
+
+    <style name="Theme.ProdutosGinasio.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 </resources>
