--- a/AMSI/Projeto/app/src/main/res/layout/item_carrinho_de_compras.xml
+++ b/AMSI/Projeto/app/src/main/res/layout/item_carrinho_de_compras.xml
@@ -57,5 +57,39 @@
 
         </LinearLayout>
 
+        <!-- Linha: Quantidade, Aumentar e Diminuir -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="start|center_vertical"
+            android:layout_marginTop="8dp">
+
+            <!-- Quantidade atual -->
+            <TextView
+                android:id="@+id/tvQuantidade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <!-- Botão para editar a quantidade -->
+            <ImageButton
+                android:id="@+id/btnEditarQuantidade"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_action_quantidade"
+                android:background="@color/white"/>
+
+            <!-- Botão para apagar o item -->
+            <ImageButton
+                android:id="@+id/btnApagarProduto"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_action_apagar"
+                android:background="@color/white"/>
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
