Layout(Grelha Produtos/Finalizar Compra)

--- a/AMSI/Projeto/app/src/main/res/layout/fragment_lista_favoritos.xml
+++ b/AMSI/Projeto/app/src/main/res/layout/fragment_lista_favoritos.xml
@@ -6,7 +6,7 @@
     tools:context=".ListaFavoritosFragment">
 
     <ListView
-        android:id="lvFavoritos"
+        android:id="@+id/lvFavoritos"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
