--- a/WebApp/ProdutosGinasio/frontend/web/css/style.css
+++ b/WebApp/ProdutosGinasio/frontend/web/css/style.css
@@ -44,19 +44,42 @@ body {
 }
 
 .produto-imagens {
-    background-color: #1376b1;
+    background-color: #75777a;
     color: white;
     /*ajustar o conteúdo no ecrã*/
     flex: 0 0 40%;
+    padding-top: 20px;
+    padding-left: 20px;
     padding-right: 20px;
 }
 
 .produto-atributos {
-    background-color: #1376b1;
+    background-color: #75777a;
     color: white;
     /*ajustar o conteúdo no ecrã*/
     flex: 0 0 30%;
+    padding-top: 20px;
     padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.produto-avaliacoes {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    background-color: #4e4242;
+}
+
+.avaliacoes {
+    background-color: #75777a;
+    border: 1px solid #ccc;
+    color: white;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
 
 .layout_padding {
