--- a/WebApp/produtosginasio/frontend/web/css/style.css
+++ b/WebApp/produtosginasio/frontend/web/css/style.css
@@ -83,6 +83,22 @@ body {
     padding-bottom: 20px;
 }
 
+.compra-descricao {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    background-color: #554f4f;
+}
+
+.encomenda-descricao {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    background-color: #554f4f;
+}
+
 
 .layout_padding {
     padding: 90px 0;
