--- a/WebApp/produtosginasio/frontend/web/css/style.css
+++ b/WebApp/produtosginasio/frontend/web/css/style.css
@@ -88,7 +88,7 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
-    background-color: #554f4f;
+    background-color: #1376b1;
 }
 
 .encomenda-descricao {
@@ -96,7 +96,7 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
-    background-color: #554f4f;
+    background-color: #1376b1;
 }
 
 
